# LSAWhisperer-BOF

./: CMakeLists.txt  Makefile  README.md  lsawhisperer.axs
include/: lsa_bofdefs.h  lsa_structs.h
src/cloudap/: cloudap_bof.c
src/common/: lsa_common.c
src/kerberos/: kerberos_bof.c
src/msv1_0/: msv1_0_bof.c
